--- a/src/main/resources/templates/fragment/mail.html
+++ b/src/main/resources/templates/fragment/mail.html
@@ -185,6 +185,12 @@
                 </div>
             </mj-text>
         </mj-column>
+        <mj-column th:unless="${#lists.isEmpty(mediaServerTags)}" width="50%">
+            <mj-text align="center" css-class="mjs-text">
+                <b th:text="#{mail.media.available.body.server-tags}" class="section-text"/>
+                <span th:each="tag : ${mediaServerTags}" th:text="${tag}"/>
+            </mj-text>
+        </mj-column>
     </mj-section>
 
     <mj-section th:unless="${#lists.isEmpty(mediaActors)}" css-class="mj-section">
