Server tags nbsp

--- a/src/main/resources/templates/fragment/mail.html
+++ b/src/main/resources/templates/fragment/mail.html
@@ -188,7 +188,7 @@
         <mj-column th:unless="${#lists.isEmpty(mediaServerTags)}" width="50%">
             <mj-text align="center" css-class="mjs-text">
                 <b th:text="#{mail.media.available.body.server-tags}" class="section-text"/><br/>
-                <span th:each="tag, iter : ${mediaServerTags}" th:text="${tag} + (${iter.last} ? '' : ' • ')" style="font-size: 12px;"/>
+                <span th:each="tag, iter : ${mediaServerTags}" th:text="${#strings.replace(tag, ' ', '&nbsp;')} + (${iter.last} ? '' : ' • ')" style="font-size: 12px;"/>
             </mj-text>
         </mj-column>
     </mj-section>
